fix(combobox): hide scrollbar if not needed (#1365)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Issue Number: CDE-451

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

--- a/projects/angular/src/forms/combobox/_combobox.clarity.scss
+++ b/projects/angular/src/forms/combobox/_combobox.clarity.scss
@@ -193,7 +193,7 @@
     position: static;
 
     max-height: mixins.baselinePx(240);
-    overflow-y: scroll;
+    overflow-y: auto;
 
     visibility: visible;
 
